--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "sass": "^1.79.3"
+    "react-resizable-panels": "^2.1.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "sass": "^1.79.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
